Fixed the overlapping of popover in header

--- a/css/companyregister.css
+++ b/css/companyregister.css
@@ -153,6 +153,8 @@ input[type="file"]::file-selector-button {
     margin-bottom: 7px;
 }
 
+/* Fixed the problem on popover overlapping the header */
 .popover {
-    overflow: visible
+    position: fixed;
+    z-index: 1;
 }
